--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "build": "tsc",
     "start": "node dist/proxy-server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/proxy-server.ts",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "service:install": "node service.js install",
+    "service:uninstall": "node service.js uninstall",
+    "service:start": "node service.js start",
+    "service:stop": "node service.js stop",
+    "service:restart": "node service.js restart"
   },
   "dependencies": {
     "compression": "^1.8.0",
@@ -16,14 +21,13 @@
     "express": "^4.18.2",
     "express-rate-limit": "^8.0.0",
     "helmet": "^8.1.0",
-    "http-proxy": "^1.18.1",
-    "http-proxy-middleware": "^3.0.5"
+    "http-proxy-middleware": "^3.0.5",
+    "node-windows": "^1.0.0-beta.8"
   },
   "devDependencies": {
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.17",
-    "@types/http-proxy": "^1.17.14",
     "@types/node": "^24.0.14",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
