--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "strictNullChecks": true,
     "strictFunctionTypes": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "service.js"],
   "exclude": ["node_modules", "dist"]
 }
